fix exmaples spelling

--- a/README.html
+++ b/README.html
@@ -70,7 +70,7 @@
 <li>Bashbot testsuite</li>
 </ul></li>
 <li><a href="doc/8_customize.md">Customize bashbot environment</a></li>
-<li><a href="examples/README.MD">Exmaples</a></li>
+<li><a href="examples/README.md">Examples</a></li>
 </ul>
 <h2 id="security-considerations">Security Considerations</h2>
 <p>Running a Telegram Bot means it is connected to the public and you never know whats send to your Bot.</p>
@@ -97,6 +97,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.7-pre2-0-g7ce2c5b"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.7-pre2-0-g7ce2c5b</h4>
+<h4 id="version-v0.7-pre2-1-g4b83377"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.7-pre2-1-g4b83377</h4>
 </body>
 </html>
