fix make-dist, fix doc links

--- a/README.html
+++ b/README.html
@@ -69,7 +69,7 @@
 <li>Prepare a new version</li>
 <li>Bashbot testsuite</li>
 </ul></li>
-<li><a href="doc/8_customize.md">Customize bashbot environment</a></li>
+<li><a href="doc/8_custom.md">Customize bashbot environment</a></li>
 <li><a href="examples/README.md">Examples</a></li>
 </ul>
 <h2 id="security-considerations">Security Considerations</h2>
@@ -97,6 +97,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.7-pre2-1-g4b83377"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.7-pre2-1-g4b83377</h4>
+<h4 id="version-v0.7-pre2-3-ge0a6d38"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.7-pre2-3-ge0a6d38</h4>
 </body>
 </html>
