--- a/README.html
+++ b/README.html
@@ -97,6 +97,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.70-0-g8ea9e3b"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.70-0-g8ea9e3b</h4>
+<h4 id="version-v0.80-dev-2-g4e4194d"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-dev-2-g4e4194d</h4>
 </body>
 </html>
