--- a/README.html
+++ b/README.html
@@ -61,7 +61,13 @@
 <li>Seperate logic from commands</li>
 <li>Test your Bot with shellcheck</li>
 </ul></li>
-<li><a href="doc/6_reference.md">Bashbot function reference</a></li>
+<li><a href="doc/6_reference.md">Function Reference</a>
+<ul>
+<li>Sending Messages, Files, Keyboards</li>
+<li>User Access Control</li>
+<li>Inline Queries</li>
+<li>Background and Interactive Jobs</li>
+</ul></li>
 <li><a href="doc/7_develop.md">Deveoper Notess</a>
 <ul>
 <li>Setup your environment</li>
@@ -97,6 +103,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.72-dev-0-g6afa177"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.72-dev-0-g6afa177</h4>
+<h4 id="version-v0.72-dev-5-g73b7734"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.72-dev-5-g73b7734</h4>
 </body>
 </html>
