move process_inline to bashbot.sh, documentation make-standalone.sh

--- a/README.html
+++ b/README.html
@@ -78,6 +78,8 @@
 <li><a href="doc/8_custom.md">Customize bashbot environment</a></li>
 <li><a href="examples/README.md">Examples</a></li>
 </ul>
+<h3 id="i-dont-like-the-many-bashbot-files">I don’t like the many bashbot files</h3>
+<p>At the beginning bashbot was simply the file <code>bashbot.sh</code> I can copy everywhere and run the bot. Now we have ‘commands.sh’, ‘mycommands.sh’, ’modules/*.sh’ and much more. Hey no Problem, if you are finished with your cool bot simply run <code>dev/make-standalone.sh</code> to create a a stripped down Version containing only ‘bashbot.sh’ and ‘commands.sh’! For more information see <a href="doc/7_develop.md">Create a stripped down Version of your Bot</a></p>
 <h2 id="security-considerations">Security Considerations</h2>
 <p>Running a Telegram Bot means it is connected to the public and you never know whats send to your Bot.</p>
 <p>Bash scripts in general are not designed to be bullet proof, so consider this Bot as a proof of concept. Bash programmers often struggle with ‘quoting hell’ and globbing, see <a href="https://unix.stackexchange.com/questions/171346/security-implications-of-forgetting-to-quote-a-variable-in-bash-posix-shells">Implications of wrong quoting</a></p>
@@ -103,6 +105,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.80-dev2-1-g0b36bc5"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-dev2-1-g0b36bc5</h4>
+<h4 id="version-v0.80-dev2-4-gb7df57a"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-dev2-4-gb7df57a</h4>
 </body>
 </html>
