bashbot - a telegram bit written in bash heading

--- a/README.html
+++ b/README.html
@@ -11,9 +11,9 @@
 <div id="header">
 <h1 class="title">Bashbot README</h1>
 </div>
-<h1 align="center">
-<img src="https://raw.githubusercontent.com/odb/official-bash-logo/master/assets/Logos/Icons/PNG/64x64.png" > Bashbot - A Telegram bot written in bash.
-</h1>
+<h2>
+<img align="middle" src="https://raw.githubusercontent.com/odb/official-bash-logo/master/assets/Logos/Icons/PNG/64x64.png" > Bashbot - A Telegram bot written in bash.
+</h2>
 <p>Written by Drew (<span class="citation">@topkecleon</span>), Daniil Gentili (<span class="citation">@danogentili</span>), and Kay M (<span class="citation">@gnadelwartz</span>).</p>
 <p>Contributions by JuanPotato, BigNerd95, TiagoDanin, and iicc1.</p>
 <p>Released to the public domain wherever applicable. Elsewhere, consider it released under the <a href="http://www.wtfpl.net/txt/copying/">WTFPLv2</a>.</p>
@@ -107,6 +107,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.80-dev2-16-gd599416"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-dev2-16-gd599416</h4>
+<h4 id="version-v0.80-dev2-19-g417bc37"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-dev2-19-g417bc37</h4>
 </body>
 </html>
